--- a/src/app/dishes/create/create.component.html
+++ b/src/app/dishes/create/create.component.html
@@ -1,1 +1,13 @@
-<p>create works!</p>
+<div class="container">
+    <legend>Create Item</legend>
+    <form>
+        <div class="mb-3">
+            <label for="txtName" class="form-label">Name</label>
+            <input id="name" type="text" [formControl]="name">
+        </div>
+
+        <div class="col col-2 offset-md-10">
+            <button type="button" (click)="create()" class="btn btn-primary">Create</button>
+        </div>
+    </form>
+</div>
