--- a/src/app/dishes/edit/edit.component.html
+++ b/src/app/dishes/edit/edit.component.html
@@ -1,1 +1,11 @@
-<p>edit works!</p>
+<!-- <div class="container">
+    <legend>Edit Item</legend>
+    <form>
+        <div class="mb-3">
+            <label for="txtName" class="form-label">Name</label>
+            <input type="text" name="name" [(ngModel)]="" class="form-control" id="txtName" />
+        </div>
+        
+        <button type="button" (click)="update()" class="btn btn-primary">Update</button>
+    </form>
+</div> -->
