--- a/src/app/dishes/home/home.component.html
+++ b/src/app/dishes/home/home.component.html
@@ -1,4 +1,9 @@
-<div class="container">
+<div class="container mt-4">
+    <div class="row mt-2">
+        <div class="col col-2 offset-md-10">
+            <a class="btn btn-primary" routerLink="/dishes/create">Create</a>
+        </div>
+    </div>
     <table class="table">
         <thead>
             <tr>
@@ -12,7 +17,30 @@
                 <th scope="row">{{ item.id }}</th>
                 <td>{{ item.name }}</td>
                 <td>{{ item.price }}</td>
+                <td>
+                    <a class="btn btn-primary" [routerLink]="['/dishes/edit', item.id]">Edit</a> |
+                    <button type="button" (click)="openDeleteModal(item.id)" class="btn btn-danger">Delete</button>
+                </td>
             </tr>
         </tbody>
     </table>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Warning!</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Are you sure to delete the item?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-danger" (click)="delete()">Confirm Delete</button>
+            </div>
+        </div>
+    </div>
 </div>
